# pwnagotchi-rs

./: .gitignore  Cargo.toml  README.md  build_plugins.sh  rustfmt.toml
.githooks/: pre-commit
assets/templates/: base.html  inbox.html  index.html  message.html  plugins.html
presets/: config-dev.toml
pwnagotchi-core/: Cargo.toml
pwnagotchi-core/src/: agent.rs  automata.rs  bettercap.rs  cli.rs  grid.rs  identity.rs  lib.rs  setup.rs  utils.rs  voice.rs
pwnagotchi-core/src/ai/: epoch.rs  mod.rs  reward.rs
pwnagotchi-core/src/events/: eventlistener.rs
pwnagotchi-core/src/mesh/: advertiser.rs
pwnagotchi-core/src/traits/: bettercapcontroller.rs
pwnagotchi-hw/: Cargo.toml
pwnagotchi-hw/src/: backend.rs  lib.rs
pwnagotchi-hw/src/display/: base.rs  waveshare2in13b_v4.rs
pwnagotchi-hw/src/hostname/: dev.rs  mod.rs  pi.rs  portable.rs
pwnagotchi-hw/src/syscontrol/: dev.rs  mod.rs  pi.rs  portable.rs
pwnagotchi-hw/src/sysinfo/: dev.rs  mod.rs  pi.rs  portable.rs
pwnagotchi-hw/src/traits/: hostname.rs
pwnagotchi-macros/: Cargo.toml
pwnagotchi-macros/src/: lib.rs
pwnagotchi-plugin-dev/: Cargo.toml
pwnagotchi-plugin-dev/src/defaults/grid/: Cargo.toml
pwnagotchi-plugin-dev/src/defaults/grid/src/: lib.rs
pwnagotchi-plugin-dev/src/examples/awesomehooks/: Cargo.toml
pwnagotchi-plugin-dev/src/examples/awesomehooks/src/: lib.rs
pwnagotchi-plugin-dev/src/examples/hello_world/: Cargo.toml
pwnagotchi-plugin-dev/src/examples/hello_world/src/: lib.rs
pwnagotchi-plugins/: Cargo.toml
pwnagotchi-plugins/src/: lib.rs
pwnagotchi-plugins/src/api/: macros.rs  mod.rs
pwnagotchi-plugins/src/examples/: awesome_hooking.rs  hello_world.rs
pwnagotchi-plugins/src/loaders/: rust.rs
pwnagotchi-plugins/src/managers/: event_manager.rs  hook_manager.rs  plugin_manager.rs
pwnagotchi-plugins/src/tests/: event_manager_test.rs  hook_manager_test.rs  hooks_test.rs
pwnagotchi-plugins/src/traits/: events.rs  hooks.rs  loaders.rs  mod.rs  plugins.rs
pwnagotchi-rs/: Cargo.toml
pwnagotchi-rs/src/: lib.rs  main.rs
pwnagotchi-rs/src/components/: manager.rs
pwnagotchi-rs/src/tests/: hookables.rs
pwnagotchi-shared/: Cargo.toml
pwnagotchi-shared/src/: lib.rs  log.rs  voice.rs
pwnagotchi-shared/src/ai/: epoch.rs  mod.rs  reward.rs
pwnagotchi-shared/src/config/: bettercap.rs  debug.rs  faces.rs  fs.rs  log.rs  main.rs  mod.rs  personality.rs  ui.rs
pwnagotchi-shared/src/identity/: mod.rs
pwnagotchi-shared/src/logger/: mod.rs
pwnagotchi-shared/src/mesh/: peer.rs
pwnagotchi-shared/src/models/: agent.rs  bettercap.rs  grid.rs  net.rs
pwnagotchi-shared/src/sessions/: lastsession.rs  manager.rs  session.rs  session_parser.rs  session_stats.rs
pwnagotchi-shared/src/traits/: agent.rs  automata.rs  bettercap.rs  epoch.rs  events.rs  general.rs  grid.rs  plugins.rs  ui.rs  voice.rs
pwnagotchi-shared/src/types/: epoch.rs  events.rs  grid.rs  hooks.rs  ui.rs
pwnagotchi-shared/src/utils/: agent.rs  faces.rs  general.rs  hooks.rs  wifi.rs
pwnagotchi-ui/: Cargo.toml
pwnagotchi-ui/assets/templates/: base.html  inbox.html  index.html  new_message.html  peers.html  plugins.html  profile.html  status.html
pwnagotchi-ui/src/: lib.rs
pwnagotchi-ui/src/ui/: components.rs  draw.rs  fonts.rs  refresher.rs  state.rs  view.rs
pwnagotchi-ui/src/web/: frame.rs  routes.rs  server.rs
pwnagotchi-ui/src/web/pages/: handler.rs  routes.rs
src/: lib.rs  main.rs
src/core/: agent.rs  automata.rs  bettercap.rs  cli.rs  commands.rs  config.rs  grid.rs  identity.rs  log.rs  session.rs  setup.rs  stats.rs  utils.rs  voice.rs
src/core/ai/: epoch.rs  mod.rs  reward.rs
src/core/config/: bettercap.rs  faces.rs  fs.rs  identity.rs  main.rs  mod.rs  personality.rs  plugins.rs  ui.rs
src/core/events/: eventlistener.rs  handler.rs  listener.rs
src/core/mesh/: advertiser.rs  mod.rs  peer.rs  wifi.rs
src/core/models/: bettercap.rs  mod.rs  net.rs
src/core/sessions/: lastsession.rs  manager.rs  session.rs
src/core/traits/: agentobserver.rs  bettercapcontroller.rs  logger.rs  syscontrol.rs  sysdata.rs
src/core/ui/: components.rs  display.rs  draw.rs  fonts.rs  mod.rs  refresher.rs  state.rs  view.rs
src/core/ui/old/: mod.rs  server.rs
src/core/ui/old/hw/: base.rs  waveshare2in13b_v4.rs
src/core/ui/old/web/: frame.rs  routes.rs  server.rs
src/traits/: hostname.rs  logger.rs  syscontrol.rs  sysdata.rs
