[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SammCheese/pwnagotchi-rs"
authors = ["Sammy <sammy@sammcheese.net>"]
keywords = ["pwnagotchi", "auditing", "security", "networking", "AI"]
categories = ["Networking", "Security", "AI"]


[profile.release]
debug = true

[workspace]
resolver = "2"
members = ["pwnagotchi-core", "pwnagotchi-ui", "pwnagotchi-hw", "pwnagotchi-rs", "pwnagotchi-shared"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["time", "rt-multi-thread", "process"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio-tungstenite = "0.27.0"
serde_json = "1.0.143"
ureq = { version = "3.1.2", features = ["json"] }
fastrand = "2.3.0"

toml = "0.9.5"
async-trait = "0.1.89"

anyhow = "1.0.99"
once_cell = "1.21.3"
parking_lot = "0.12.4"

base64 = "0.22.1"
hex = "0.4.3"
md5 = "0.8.0"
regex = "1.11.2"

sysinfo = "0.37.0"

time = {version = "0.3.43", features = ["formatting", "parsing", "macros", "serde"]}

png = "0.18.0"
rgb = "0.8.52"
tiny-skia = "0.11.4"


