[package]
name = "pwnagotchi-core"
description = "The Core of Pwnagotchi-rs"

edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]
pwnagotchi-shared = { path= "../pwnagotchi-shared" }

async-trait.workspace = true
tokio.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
time.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
ureq.workspace = true
fastrand.workspace = true
hex.workspace = true
regex.workspace = true
base64.workspace = true




