[package]
name = "pwnagotchi-macros"
description = "Utility for Hooks and other things."

edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
pwnagotchi-shared = { path = "../pwnagotchi-shared" }


proc-macro2 = "1.0.101"
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.41"


parking_lot.workspace = true
inventory.workspace = true
