[package]
name = "pwnagotchi-plugins"
description = "Plugin Loader for Pwnagotchi-rs"

edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
pwnagotchi-macros = { path = "../pwnagotchi-macros" }
pwnagotchi-shared = { path = "../pwnagotchi-shared" }
pwnagotchi-core = { path = "../pwnagotchi-core" }

futures.workspace = true
inventory.workspace = true
anyhow.workspace = true
uuid.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
serde = { workspace = true }
tokio.workspace = true
libloading = "0.8.9"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
serial_test = "3.2"