[package]
name = "pwnagotchi-shared"
description = "Shared types, crates, utilities for Pwnagotchi-rs"

edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
ureq.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
parking_lot.workspace = true
time.workspace = true
fastrand.workspace = true
hex.workspace = true
md5.workspace = true
regex.workspace = true
base64.workspace = true
png.workspace = true
rgb.workspace = true
tiny-skia.workspace = true

flate2 = "1.1.2"
uuid = { version = "1.18.1", features = ["v4"] }

sha2 = "0.10.9"
rsa = "0.9.8"

